# ros-yolov5

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
launch/: demo.launch  service_demo.launch
msg/: bbox2d.msg  result.msg
src/: action_client_demo.cpp  demo_client.cpp  demo_server.py  demo_service_server.py  service_client_demo.cpp
src/yolo_bridge/: yolo_bridge.py  yolo_bridge_utils.py
srv/: yolo.srv
